2015-03-06 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        A       scripts/HypoTest.py
        M       src/ConfigMgr.cxx
        M       src/ConfigMgr.h
        * added dynamic rescan for upper limit calculation

2015-02-18 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M       python/configManager.py
        M       src/ConfigMgr.cxx
        M       src/ConfigMgr.h
	* allow the user to specify the scan ranges for the second scan in -l - addition sugested by Daniela Boerner

2015-01-21 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * multiple smaller modifications for the tutorial, mostly commenting any usage of the ATLAS plotting style, but also adding the file MyUpperLimitAnalysis_SS.py back
        * updating setup_afs.sh to Root 5.34.23
        * tagging HistFitter-00-00-44

2014-10-24 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * fixing buildHisto in python/sample.py: default lower edge of histograms now 0.5 as required for the 'cuts' case (previously buggy)
        * added the functionality to define a width of the bins - formerly alsways 1., now variable. Default is 1. to ensure backward compatibility.

2014-10-02 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * moving macros/contourplot and analysis/batchjobs directories to HistFitter User
        * add licences to files in macro directory
        * remove ATLAS specific stuff in macro directory
        D macros/AtlasStyle.C and macros/AtlasStyle.h

2014-09-19 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * starting to comment macro directory - to be continued

2014-09-08 Alex Koutsman <alex.koutsman@cern.ch>
	* setup.sh: several updates to make the setup script non CERN specific (working after setting up localRootSetup)
	* Might possibly need to be changed again for the public code release
	* Tagging HistFitter-00-00-42 (for HF tutorial at TRIUMF)

2014-09-02 Alex Koutsman <alex.koutsman@cern.ch>